--- a/main.html
+++ b/main.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>SoonChangGo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/1411424180.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <nav id="nav" class="navbar navbar-expand-lg">
@@ -28,30 +29,30 @@
                   Album
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#together"><strong>[싱글] 서로는 서로를</strong></a></li>
+                    <li><a href=#together class="dropdown-item">[싱글] 서로는 서로를</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#now"><strong>[EP] 지금, 그때</strong></a></li>
-                    <li><a class="dropdown-item" href="#cndjr">추억으로만 간직해야 해</a></li>
-                    <li><a class="dropdown-item" href="#maum">마음 속 이야기</a></li>
-                    <li><a class="dropdown-item" href="#ag">아직 그리워해</a></li>
+                    <li><a href="#now" class="dropdown-item">[EP] 지금, 그때</a></li>
+                    <li><a href="#cndjr" class="dropdown-item">추억으로만 간직해야 해</a></li>
+                    <li><a href="#maum" class="dropdown-item">마음 속 이야기</a></li>
+                    <li><a href="#ag" class="dropdown-item">아직 그리워해</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#purple"><strong>[싱글] 보라색 고백</strong></a></li>
+                    <li><a href="#purple" class="dropdown-item">[싱글] 보라색 고백</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#unlock"><strong>[싱글] 잠금해제</strong></a></li>
+                    <li><a href="#unlock" class="dropdown-item">[싱글] 잠금해제</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#"><strong>[정규] SOON</strong></a></li>
-                    <li><a class="dropdown-item" href="#hc">한참</a></li>   
-                    <li><a class="dropdown-item" href="#bye">Bye</a></li>
-                    <li><a class="dropdown-item" href="#sg">사랑에 관하여</a></li>
-                    <li><a class="dropdown-item" href="#purple">보라색 고백</a></li>
-                    <li><a class="dropdown-item" href="#pilly">Philly</a></li>
-                    <li><a class="dropdown-item" href="#cry">오늘만 울자</a></li>
-                    <li><a class="dropdown-item" href="#but">어쩌면 그랬을지도</a></li>
-                    <li><a class="dropdown-item" href="#now">지금, 그때</a></li>
-                    <li><a class="dropdown-item" href="#together">서로는 서로를</a></li>
-                    <li><a class="dropdown-item" href="#outro">outtro</a></li>
+                    <li><a href="#" class="dropdown-item">[정규] SOON</a></li>
+                    <li><a href="#hc" class="dropdown-item">한참</a></li>   
+                    <li><a href="#bye" class="dropdown-item">Bye</a></li>
+                    <li><a href="#sg" class="dropdown-item">사랑에 관하여</a></li>
+                    <li><a href="#purple" class="dropdown-item">보라색 고백</a></li>
+                    <li><a href="#pilly" class="dropdown-item">Philly</a></li>
+                    <li><a href="#cry" class="dropdown-item">오늘만 울자</a></li>
+                    <li><a href="#but" class="dropdown-item">어쩌면 그랬을지도</a></li>
+                    <li><a href="#now" class="dropdown-item">지금, 그때</a></li>
+                    <li><a href="#together" class="dropdown-item">서로는 서로를</a></li>
+                    <li><a href="#outro" class="dropdown-item">outtro</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#"><strong>[싱글] 폴라로이드 러브</strong></a></li>
+                    <li><a href="#pl" class="dropdown-item">[싱글] 폴라로이드 러브</a></li>
                 </ul>
               </ul>
               <span class="d-flex me-2" id="icons">
@@ -536,6 +537,7 @@
           </div>
         </div>
       </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
